[package]
name = "chg_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
rev = "cdb18e610a72b4a025d7e1890140393adee5b087"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = { version = "0.5", features = ["serde-1"] }

